--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
+    "css.remoteStyleSheets":[
+        "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    ],
+    "editor.formatOnSave": true,
     "liveServer.settings.port": 5501
 }
